--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Какой-то Апп</string>
+    <string name="app_name">SomeApp</string>
     <string name="hello_world">Привет мир!</string>
     <string name="action_settings">Настройки</string>
-    <string name="ff0_btn_0_title">Кнопочка</string>
+    <string name="ff0_btn_0_title">Погода</string>
 </resources>
